# realbench

./: .gitignore  BENCH_SPEC.md  FAQ.md  LICENSE  METHODOLOGY.md  README.md  analyze.py  requirements.txt  runner.py
agents/: claude-code.sh  claude-deepseek.sh  codex.sh  opencode.sh  pi-ds4pro.sh  pi-flash.sh  pi-gemini.sh  pi-glm.sh  qwen-code.sh
results/: runs-en-135.jsonl
scripts/: check-cost-reconciliation.py  curate-en-135.py  make-comparison.py  make-cost-chart.py  make-same-backend-summary.py
tasks/001-fizzbuzz/: .test_hash  prompt.md  verify.sh
tasks/002-fix-bug/: .test_hash  prompt.md  verify.sh
tasks/003-implement-spec/: .test_hash  prompt.md  verify.sh
tasks/004-laravel-migrate/: .test_hash  prompt.md  verify.sh
tasks/005-race-condition/: .test_hash  prompt.md  verify.sh
tasks/006-lru-race/: .test_hash  prompt.md
tasks/007-deadlock/: .test_hash  prompt.md  verify.sh
tasks/008-debounce-leak/: .test_hash  prompt.md  verify.sh
tasks/009-refactor-god-controller/: .test_hash  prompt.md  verify.sh
tasks/010-goroutine-leak/: .test_hash  prompt.md  verify.sh
tasks/011-channel-deadlock/: .test_hash  prompt.md  verify.sh
tasks/012-context-propagation/: .test_hash  prompt.md  verify.sh
tasks/013-extract-package/: .test_hash  prompt.md  verify.sh
tasks/014-promise-race-leak/: .test_hash  prompt.md  verify.sh
tasks/015-react-effect-cleanup/: .test_hash  prompt.md  (+1 more)
tasks/017-tokio-select-cancel/workspace/: Cargo.toml
tasks/017-tokio-select-cancel/workspace/src/: lib.rs
tasks/017-tokio-select-cancel/workspace/tests/: integration.rs
(+194 files in other folders)
