[package]
name = "tokio_select_cancel"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokio_select_cancel"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"

[profile.release]
opt-level = 3
